Use percentage widths to avoid horizontal scroll bars

--- a/contents/css/resume.screen.css
+++ b/contents/css/resume.screen.css
@@ -179,7 +179,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 100vw;
+    width: 100%;
     height: 150vh;
 
     z-index: -1;
@@ -203,7 +203,7 @@
     position: absolute;
     top: 100vh;
     left: 0px;
-    width: 100vw;
+    width: 100%;
     height: 50vh;
 
     background-image: linear-gradient(rgba(245, 245, 245, 0), rgba(245, 245, 245, 1));
@@ -245,7 +245,7 @@
     position: absolute;
     bottom: 50vh;
     left: 0px;
-    width: 100vw;
+    width: 100%;
 
     color: var(--body-neg-text-color);
 
